<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_create_custom"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
    tools:context="cs321.customstrength.addCustomExercise">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="Create Custom Exercise"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
			android:layout_width="wrap_content">
		</TextView>
        <Button
			android:id = "@+id/createButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
			android:layout_alignParentEnd="true"
            android:text="Create"
            android:onClick="addCustomExercise">
		</Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Enter Custom Exercise Name">
		</TextView>
        <EditText
			android:id = "@+id/customNameValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
			android:hint="Enter Custom Exercise Name..."
			android:textColor="#000000"
			android:cursorVisible="true"
			android:background="@android:color/white">
		</EditText>
		<TextView
			android:id = "@+id/exerciseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Select Exercise Type">
		</TextView>
        <Spinner
			android:id="@+id/typeValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@android:drawable/btn_dropdown"
			android:spinnerMode="dropdown">
		</Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Enter Primary Muscles Used">
		</TextView>
        <EditText
			android:id = "@+id/primaryValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
			android:hint="Enter Primary Muscles Used..."
			android:textColor="#000000"
			android:cursorVisible="true"
			android:background="@android:color/white">
		</EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Enter Secondary Muscles Used">
		</TextView>
        <EditText
			android:id = "@+id/secondaryValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
			android:hint="Enter Secondary Muscles Used..."
			android:textColor="#000000"
			android:cursorVisible="true"
			android:background="@android:color/white">
		</EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Enter Equipment Used">
		</TextView>
        <EditText
			android:id = "@+id/equipmentValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
			android:hint="Enter Equipment Used..."
			android:textColor="#000000"
			android:background="@android:color/white">
		</EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Enter Exercise Difficulty">
		</TextView>
        <EditText
			android:id = "@+id/difficultyValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
			android:hint="Enter Exercise Difficulty..."
			android:textColor="#000000"
			android:cursorVisible="true"
			android:background="@android:color/white">
		</EditText>
    </LinearLayout>
</ScrollView>